--- a/classifier.ipynb
+++ b/classifier.ipynb
@@ -168,18 +168,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def weight_var(shape):\n",
-    "    w = tf.truncated_normal(shape=shape, stddev=0.5)\n",
+    "    w = tf.truncated_normal(shape=shape, stddev=0.01)\n",
     "    return tf.Variable(w)\n",
     "\n",
     "def bias_var(shape):\n",
-    "    b = tf.truncated_normal(shape=shape, stddev=0.5)\n",
+    "    b = tf.truncated_normal(shape=shape, stddev=0.01)\n",
     "    return tf.Variable(b)\n",
     "\n",
     "def CNN(x_):\n",
@@ -188,8 +188,8 @@
     "    strides2 = [1, 2, 2, 1]\n",
     "    ksize = strides2\n",
     "    \n",
-    "    w1 = weight_var(shape=[3, 3, 3, 9])   \n",
-    "    b1 = bias_var([9])\n",
+    "    w1 = weight_var(shape=[5, 5, 3, 32])   \n",
+    "    b1 = bias_var([32])\n",
     "    layer1 = tf.nn.conv2d(x_, w1, strides=strides1, padding='VALID')  #(, 44, 44, 64)\n",
     "    layer1 = tf.nn.bias_add(layer1, b1)\n",
     "    layer1 = tf.nn.relu(layer1)\n",
@@ -197,8 +197,8 @@
     "    layer1 = tf.nn.max_pool(layer1, ksize=ksize, strides=strides2, padding='VALID') #(, 22, 22, 64)\n",
     "    \n",
     "    \n",
-    "    w2 = weight_var(shape=[3, 3, 9, 32])\n",
-    "    b2 = bias_var([32])\n",
+    "    w2 = weight_var(shape=[5, 5, 32, 64])\n",
+    "    b2 = bias_var([64])\n",
     "    layer2 = tf.nn.conv2d(layer1, w2, strides=strides1, padding='SAME') #(, 18, 18, 64)\n",
     "    layer2 = tf.nn.bias_add(layer2, b2)\n",
     "    #print(layer2.get_shape)\n",
@@ -209,38 +209,34 @@
     "    layer2 = tf.nn.max_pool(layer2, ksize=ksize, strides=strides2, padding='SAME') #(, 9, 9, 64)\n",
     "    #layer2 = tf.nn.dropout(layer2, 0.5)\n",
     "    \n",
-    "    w3 = weight_var(shape=[3, 3, 32, 64])\n",
-    "    b3 = bias_var([64])\n",
-    "    layer3 = tf.nn.conv2d(layer2, w3, strides=strides1, padding='SAME')\n",
-    "    layer3 = tf.nn.bias_add(layer3, b3)\n",
-    "    layer3 = tf.nn.relu(layer3)\n",
+    "    #w3 = weight_var(shape=[5, 5, 18, 36])\n",
+    "    #b3 = bias_var([36])\n",
+    "    #layer3 = tf.nn.conv2d(layer2, w3, strides=strides1, padding='SAME')\n",
+    "    #layer3 = tf.nn.bias_add(layer3, b3)\n",
+    "    #layer3 = tf.nn.relu(layer3)\n",
     "\n",
     "    \n",
-    "    layer5= tf.nn.max_pool(layer3, ksize=ksize, strides=strides2, padding='SAME')\n",
+    "    layer5= tf.nn.max_pool(layer2, ksize=ksize, strides=strides2, padding='SAME')\n",
     "    \n",
-    "    layer5 = tf.nn.dropout(layer5, 0.5)\n",
+    "    #layer5 = tf.nn.dropout(layer5, 0.5)\n",
     "    \n",
     "    \n",
     "    flatten = tf.contrib.layers.flatten(layer5)\n",
     "    dim = flatten.get_shape().as_list()\n",
     "    print(dim[1])\n",
     "    \n",
-    "    wc1 = weight_var(shape=[(dim[1]), 512])\n",
-    "    b_c1 = bias_var([512])\n",
+    "    wc1 = weight_var(shape=[(dim[1]), 128])\n",
+    "    b_c1 = bias_var([128])\n",
     "    fc1 = tf.add(tf.matmul(flatten, wc1), b_c1)\n",
     "    fc1 = tf.nn.relu(fc1)\n",
-    "    fc1 = tf.nn.dropout(fc1, 0.5)\n",
+    "    fc1 = tf.nn.dropout(fc1, keep_prob)\n",
     "    \n",
-    "    wc2 = weight_var(shape=[512, 128])\n",
-    "    b_c2 = bias_var([128])\n",
-    "    fc2 = tf.add(tf.matmul(fc1, wc2), b_c2)\n",
-    "    fc2 = tf.nn.relu(fc2)\n",
-    "    fc2 = tf.nn.dropout(fc2, 0.5)\n",
-    "    \n",
-    "    \n",
-    "    wc3 = weight_var(shape=[128, n_classes])\n",
-    "    b_c3 = bias_var([n_classes])\n",
-    "    logits = tf.add(tf.matmul(fc2, wc3), b_c3)\n",
+    "    wc2 = weight_var(shape=[128, 2])\n",
+    "    b_c2 = bias_var([2])\n",
+    "    logits = tf.add(tf.matmul(fc1, wc2), b_c2)\n",
+    "    #fc2 = tf.nn.relu(fc2)\n",
+    "    #fc2 = tf.nn.dropout(fc2, 0.5)\n",
+    "\n",
     "    \n",
     "    \n",
     "    return logits\n",
@@ -249,10 +245,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 42,
+   "metadata": {},
    "outputs": [],
    "source": [
     "tf.reset_default_graph()\n",
@@ -264,18 +258,18 @@
     "n_labels = len(set(labels))\n",
     "feat = data.shape[1]\n",
     "channels = data.shape[3]\n",
-    "batch_size = 64\n",
+    "batch_size = 32\n",
     "\n",
     "x = tf.placeholder(dtype=tf.float32, shape=(None, feat, feat, channels))\n",
     "#x_reshape = tf.reshape(x,[-1, img_size, img_size, n_channels] )\n",
-    "\n",
+    "keep_prob = tf.placeholder(dtype=tf.float32)\n",
     "y = tf.placeholder(tf.int32, shape=(None))\n",
     "y_hot = tf.one_hot(y, 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -315,7 +309,8 @@
     "        end = offset+batch_size\n",
     "        xs_batch, ys_batch = X_batch[offset:end], Y_batch[offset:end]\n",
     "        loss_, acc = sess.run([loss, accuracy], feed_dict={x:xs_batch, \n",
-    "                                                           y:ys_batch\n",
+    "                                                           y:ys_batch,\n",
+    "                                                           keep_prob:1.0\n",
     "                                                           \n",
     "                                                           })\n",
     "        total_loss += (float(loss_)*xs_batch.shape[0])\n",
@@ -326,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +370,8 @@
     "                end = offset+batch_size\n",
     "                xs_batch, ys_batch = X_tr[offset:end], Y_tr[offset:end]\n",
     "                loss_, _ = sess.run([loss, optimizer], feed_dict={x: xs_batch, \n",
-    "                                                                  y: ys_batch})    \n",
+    "                                                                  y: ys_batch,\n",
+    "                                                                  keep_prob:0.5})    \n",
     "\n",
     "            validation_loss, validation_acc = stats(X_val, Y_val)\n",
     "            acc_map.append(round(validation_acc*100, 2))\n",
