--- a/classifier.ipynb
+++ b/classifier.ipynb
@@ -345,7 +345,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initializing Training\n"
+      "Initializing Training\n",
+      "EPOCH 1\n",
+      "Validation Loss = 0.693 and Validation Accuracy = 50.360 %\n"
      ]
     }
    ],
